k8s/overlays/dev/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kiddoo-ingress
spec:
  tls:
    - hosts:
        - api-dev.level-sony.cloud
      secretName: kiddoo-dev-tls
  rules:
    - host: api-dev.level-sony.cloud
      http:
        paths:
          - path: /api/v1
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8000
          - path: /metrics
            pathType: Exact
            backend:
              service:
                name: api-gateway
                port:
                  number: 8000
